--- a/src/features/TodoList/TodoList.module.css
+++ b/src/features/TodoList/TodoList.module.css
@@ -9,3 +9,10 @@ ul {
 ul li {
     list-style: none;
 }
+ul div > h2{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    margin-top: 35%;
+}
